--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PrU2</string>
+    <string name="next">Siguiente</string>
+    <string name="prev">Anterior</string>
+
 </resources>
